--- a/package.json
+++ b/package.json
@@ -3,21 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "node": "node server.js"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "moment": "^2.30.1",
+    "next": "14.0.0",
+    "next-themes": "^0.3.0",
+    "peerjs": "^1.5.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "typescript": "5.4.5"
   }
 }
